--- a/src/stylesheets/scss/components/_navigation.scss
+++ b/src/stylesheets/scss/components/_navigation.scss
@@ -187,6 +187,7 @@
     }
 
     #nav-dropdown-menu {
+        display: none;
         height: 0rem;
         width: 100%;
         overflow: hidden;
@@ -257,7 +258,7 @@
 
             #light-mode-switch {}
 
-            #nav-hamburger-button {}
+            #nav-hamburger {}
         }
     }
 
@@ -290,7 +291,7 @@
 
             #light-mode-switch {}
 
-            #nav-hamburger-button {}
+            #nav-hamburger {}
         }
     }
 
@@ -313,7 +314,9 @@
             }
         }
 
-        #nav-dropdown-menu {}
+        #nav-dropdown-menu {
+            display: block;
+        }
     }
 
     @media (max-width: $mobile-width) {}
