--- a/src/stylesheets/scss/layout/_main-section.scss
+++ b/src/stylesheets/scss/layout/_main-section.scss
@@ -61,13 +61,13 @@
     
                 h2 {
                     max-width: 20rem;
-                    font-size: 2rem;
+                    font-size: 2.5rem;
     
                     &::after,
                     &::before {
                         content: '';
                         width: 4.2rem;
-                        height: 0.2rem;
+                        height: 0.25rem;
                     }
                 }
             }
@@ -80,8 +80,8 @@
                 margin-bottom: 1rem;
     
                 h2 {
-                    max-width: 16rem;
-                    font-size: 1.5rem;
+                    width: 100%;
+                    font-size: 1.8rem;
     
                     &::after,
                     &::before {
