--- a/src/stylesheets/scss/section/_hero-section.scss
+++ b/src/stylesheets/scss/section/_hero-section.scss
@@ -198,7 +198,7 @@
             }
 
             #intro {
-                font-size: 1rem;
+                font-size: 1.2rem;
             }
 
             #call-to-action {
@@ -233,6 +233,10 @@
                 #name {
                     line-height: normal;
                 }
+            }
+
+            #intro {
+                font-size: 1rem;
             }
 
             #call-to-action {
